[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'identity-runtime-wasm'
version = '1.0.0'
[dependencies.identity-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['identity-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
